# ChangeLog for sci-biology/afni
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  Now istalling exes specified in src/prog_list.txt

  11 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  reverted to insinto, dealing with run permissions separately

  11 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  finished git-uri rewrite

  11 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  installing directly from github

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  no recursive doexe

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  installing everyting as exe

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  adding run permissions

  10 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added path to environment variable, corrected spelling and whitespace

  05 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added dep

  04 Mar 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  added dep and removed keyword for live ebuild

*afni-9999 (04 Mar 2015)

  04 Mar 2015;  <chymera@gentoo.org> +afni-9999.ebuild, +metadata.xml:
  Added live ebuild and metadata